logo work spacing fix

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -135,7 +135,7 @@
     a.img-7,
     a.img-8,
     a.img-9 {
-      height: 9rem;
+      height: 8rem;
     }
   }
 }
